Adjust README to point to the right file for settings variables

--- a/README
+++ b/README
@@ -2,8 +2,8 @@ A Ruby Sinatra powered User-Pain dashboard for use with Jira.
 
 To configure:
 * Set up the following environmental variables: JIRA_USERNAME JIRA_PASSWORD JIRA_HOSTNAME JIRA_PORT
-* Edit $TYPE and $LIKELIHOOD in helpers.rb to reflect your custom fields names
-* Adjust $USERPAIN_THRESHOLD to your needs. Default is 30.
+* Edit $TYPE and $LIKELIHOOD in config.ru to reflect your custom fields names
+* Adjust $USERPAIN_THRESHOLD in config.ru to your needs. Default is 30.
 
 To launch:
 rackup -p 80
